# sitira-embedded-daisy

./: .gitmodules  Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: binary_input.rs  config.rs  dual_mux_4051.rs  encoder.rs  granular.rs  lcd.rs  main.rs  sd_card.rs  sdram.rs  sitira.rs
