[package]
name = "sitira-synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rtic = "1.0.0"
cortex-m = "^0.7.1"
cortex-m-rt = { version = "^0.6.13", features = ["device"] }
stm32h7xx-hal = { version = "0.11.0", features = [ "stm32h750v", "rt", "revision_v", "usb_hs" ] }
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
panic-semihosting = { version = "0.5.6" }
libdaisy = { path = "../libdaisy-rust", features = ["log-rtt"]}
rtt-target = { version = "0.3.0", features = ["cortex-m"], optional = true }
embedded-sdmmc = "0.3.0"
biquad = "0.4.2"
micromath = "2.0.0"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
ili9341 = "0.5.0"